# django-urlauth

./: .gitignore  .hgignore  .pre-commit-config.yaml  AUTHORS  INSTALL  INSTALL.md  LICENSE  README  README.md  pyproject.toml  runtests.py  setup.py
.github/workflows/: test.yaml
.hg/: dirstate  hgrc  undo.desc
.hg/cache/: branch2-served  rbc-revs-v1
.hg/store/: 00changelog.i  00manifest.i  fncache  undo
.hg/store/data/: _a_u_t_h_o_r_s.i  _i_n_s_t_a_l_l.i  _l_i_c_e_n_s_e.i  _m_a_n_i_f_e_s_t.in.i  _r_e_a_d_m_e.i  pypi.sh.i  setup.cfg.i  setup.py.i  ~2ehgignore.i
.hg/store/data/demo/: manage.py.i  settings.py.i  test.py.i  urlauth.i  urls.py.i
.hg/store/data/docs/: _makefile.i  conf.py.i  index.rst.i
.hg/store/data/urlauth/: admin.py.i  middleware.py.i  models.py.i  settings.py.i  signals.py.i  tests.py.i  util.py.i
.hg/store/data/urlauth/management/commands/: urlauth__cleanup.py.i
.hg/store/data/urlauth/migrations/: 0001__initial.py.i  0002__auto____chg__field__authkey__uid.py.i  ____init____.py.i
demo/: manage.py  settings.py  test.py  urlauth  urls.py
docs/: Makefile  conf.py  index.rst
src/urlauth/: middleware.py  settings.py
tests/: test_app.py  test_settings.py  urls.py
urlauth/: admin.py  middleware.py  models.py  settings.py  signals.py  tests.py  util.py
urlauth/management/commands/: urlauth_cleanup.py
urlauth/migrations/: 0001_initial.py  0002_auto__chg_field_authkey_uid.py
