[tool.poetry]
name = "django-urlauth-egguy"
version = "0.2.0"
description = "Django application for user authentication with key in hypertext link"
authors = ["egguy <etienne.guilluy@gmail.com>"]
license = "BSD"

[tool.poetry.dependencies]
python = "^2.7"
future = "^0.18.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
